--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div class="wrapper">
 	<header>
-		<img src="img/profile.jpg">
+		<img src="img/profile.jpeg">
 		<h1>Wreck-it Ralph</h1>
 	</header>
 	<div class="content">
