--- a/css/index.html
+++ b/css/index.html
@@ -11,7 +11,7 @@
 		<h1>Wreck-it Ralph</h1>
 	</header>
 	<div class="content">
-		<h2>About Ralph</h2>
+		<h2>About fuckin Ralph</h2>
 		<p>An 8-bit video-game bad guy who travels the length of the arcade to prove that he's a good guy.</p>
 		<h2>Ralph's characteristics</h2>
 		<ol>
